--- a/packaging/standalone/standalone-community/src/main/distribution/text/community/conf/neo4j-wrapper.conf
+++ b/packaging/standalone/standalone-community/src/main/distribution/text/community/conf/neo4j-wrapper.conf
@@ -2,7 +2,7 @@
 # Property file references
 #********************************************************************
 
-wrapper.java.additional=-Dorg.neo4j.config.file=conf/neo4j.properties
+wrapper.java.additional=-Dorg.neo4j.config.file=conf/neo4j.conf
 wrapper.java.additional=-Dlog4j.configuration=file:conf/log4j.properties
 
 #********************************************************************
