--- a/packaging/standalone/pom.xml
+++ b/packaging/standalone/pom.xml
@@ -46,7 +46,7 @@
     <windows-wrapper.version>5</windows-wrapper.version>
     <windows-wrapper.filename>windows-service-wrapper-${windows-wrapper.version}.jar</windows-wrapper.filename>
 
-    <!-- conf/neo4j.properties filter properties -->
+    <!-- conf/neo4j.conf filter properties -->
     <org.neo4j.database.location>data/databases/graph.db</org.neo4j.database.location>
     <org.neo4j.server.webserver.http.enabled>true</org.neo4j.server.webserver.http.enabled>
     <org.neo4j.webserver.port>7474</org.neo4j.webserver.port>
