Turn on findbugs and add annotation support
It was already there as a plugin. I updated the version and enabled it
to run during builds. Without failing them for now.

Also adds dependencies to the findbugs annotations library, so one can
use things like `@Nullable` and `@Nonnull`.

--- a/community/logging/pom.xml
+++ b/community/logging/pom.xml
@@ -88,5 +88,15 @@ the relevant Commercial Agreement.
       <artifactId>commons-lang3</artifactId>
       <scope>test</scope>
     </dependency>
+    <dependency>
+      <groupId>com.google.code.findbugs</groupId>
+      <artifactId>jsr305</artifactId>
+      <version>3.0.0</version>
+    </dependency>
+    <dependency>
+      <groupId>com.google.code.findbugs</groupId>
+      <artifactId>annotations</artifactId>
+      <version>3.0.0</version>
+    </dependency>
   </dependencies>
 </project>
