Introduce a neo4j-security module, for auth, encryption and so on.
- Move the AuthManager down to neo4j-security, as a first step on
  a larger planned refactoring.

- Also factor out a neo4j-common module for common infrastructure
  that are currently spread across varios modules. Moving a small
  portion of that spread-out code only to support the AuthManager.

--- a/community/pom.xml
+++ b/community/pom.xml
@@ -31,6 +31,7 @@
   </scm>
 
   <modules>
+    <module>common</module>
     <module>resource</module>
     <module>collections</module>
     <module>primitive-collections</module>
@@ -40,6 +41,7 @@
     <module>io</module>
     <module>csv</module>
     <module>logging</module>
+    <module>security</module>
     <module>neo4j-slf4j</module>
     <module>codegen</module>
     <module>kernel</module>
