Demonstrate turning off auth for HA status endpoint

--- a/packaging/standalone/standalone-enterprise/src/main/distribution/text/enterprise/conf/neo4j.conf
+++ b/packaging/standalone/standalone-enterprise/src/main/distribution/text/enterprise/conf/neo4j.conf
@@ -185,3 +185,7 @@ ha.pull_interval=10
 
 # Timeout for heartbeats between cluster members. Should be at least twice that of ha.heartbeat_interval.
 #heartbeat_timeout=11s
+
+# If you are using a load-balancer that doesn't support HTTP Auth, you may need to turn off authentication for the
+# HA HTTP status endpoint by uncommenting the following line.
+#dbms.security.ha_status_auth_enabled=false
