Fold function module into common

--- a/community/collections/pom.xml
+++ b/community/collections/pom.xml
@@ -59,7 +59,7 @@ the relevant Commercial Agreement.
     </dependency>
     <dependency>
       <groupId>org.neo4j</groupId>
-      <artifactId>neo4j-function</artifactId>
+      <artifactId>neo4j-common</artifactId>
       <version>${project.version}</version>
     </dependency>
 
