--- a/community/common/pom.xml
+++ b/community/common/pom.xml
@@ -50,6 +50,17 @@ the relevant Commercial Agreement.
   </licenses>
 
   <dependencies>
+    <!-- TODO: Is there a way avoid this as a runtime dependency? -->
+    <dependency>
+      <groupId>com.google.code.findbugs</groupId>
+      <artifactId>jsr305</artifactId>
+      <version>3.0.0</version>
+    </dependency>
+    <dependency>
+      <groupId>com.google.code.findbugs</groupId>
+      <artifactId>annotations</artifactId>
+      <version>3.0.0</version>
+    </dependency>
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
