--- a/community/graphdb-api/pom.xml
+++ b/community/graphdb-api/pom.xml
@@ -53,7 +53,7 @@ the relevant Commercial Agreement.
   <dependencies>
     <dependency>
       <groupId>org.neo4j</groupId>
-      <artifactId>neo4j-function</artifactId>
+      <artifactId>neo4j-common</artifactId>
       <version>${project.version}</version>
     </dependency>
     <dependency>
