Add Bolt message metrics

--- a/enterprise/metrics/pom.xml
+++ b/enterprise/metrics/pom.xml
@@ -100,6 +100,12 @@
       <scope>provided</scope>
     </dependency>
 
+    <dependency>
+      <groupId>org.neo4j</groupId>
+      <artifactId>neo4j-bolt</artifactId>
+      <version>${project.version}</version>
+      <scope>provided</scope>
+    </dependency>
 
     <dependency>
       <groupId>org.neo4j</groupId>
@@ -158,6 +164,13 @@
     <dependency>
       <groupId>org.neo4j</groupId>
       <artifactId>neo4j-core-edge</artifactId>
+      <version>${project.version}</version>
+      <scope>test</scope>
+      <type>test-jar</type>
+    </dependency>
+    <dependency>
+      <groupId>org.neo4j</groupId>
+      <artifactId>neo4j-bolt</artifactId>
       <version>${project.version}</version>
       <scope>test</scope>
       <type>test-jar</type>
