--- a/manual/javadocs/pom.xml
+++ b/manual/javadocs/pom.xml
@@ -36,7 +36,7 @@
   <dependencies>
     <dependency>
       <groupId>org.neo4j</groupId>
-      <artifactId>neo4j-function</artifactId>
+      <artifactId>neo4j-common</artifactId>
       <version>${project.version}</version>
       <classifier>sources</classifier>
       <scope>provided</scope>
