--- a/manual/manual/pom.xml
+++ b/manual/manual/pom.xml
@@ -357,6 +357,7 @@
               <sourceDirectory>${project.build.directory}/manpages</sourceDirectory>
             <postProcess>
               <gzip src="${project.build.directory}/docbkx/manpages/man1/neo4j.1" destfile="${project.build.directory}/manpages/neo4j.1.gz"/>
+              <gzip src="${project.build.directory}/docbkx/manpages/man1/neo4j-admin.1" destfile="${project.build.directory}/manpages/neo4j-admin.1.gz"/>
               <gzip src="${project.build.directory}/docbkx/manpages/man1/neo4j-shell.1" destfile="${project.build.directory}/manpages/neo4j-shell.1.gz"/>
               <gzip src="${project.build.directory}/docbkx/manpages/man1/neo4j-backup.1" destfile="${project.build.directory}/manpages/neo4j-backup.1.gz"/>
               <gzip src="${project.build.directory}/docbkx/manpages/man1/neo4j-import.1" destfile="${project.build.directory}/manpages/neo4j-import.1.gz"/>
