Only allow databases within the data directory to be mounted
We no longer support mounting databases on arbitrary paths. Individual
databases are now specified by name rather than path and the directory
structure within the data directory is an implementation detail.

--- a/packaging/standalone/standalone-enterprise/src/main/distribution/text/enterprise/conf/neo4j.conf
+++ b/packaging/standalone/standalone-enterprise/src/main/distribution/text/enterprise/conf/neo4j.conf
@@ -2,12 +2,15 @@
 # #{product.fullname} configuration
 ################################################################
 
+# Path of the data directory
+#dbms.directories.data=data
+
+# The name of the database to mount
+#dbms.active_database=graph.db
+
 #***************************************************************
 # Server configuration
 #***************************************************************
-
-# location of the database directory
-org.neo4j.server.database.location=#{org.neo4j.database.location}
 
 # Database mode
 # Allowed values:
