--- a/packaging/standalone/standalone-community/src/main/distribution/text/community/conf/neo4j.conf
+++ b/packaging/standalone/standalone-community/src/main/distribution/text/community/conf/neo4j.conf
@@ -2,12 +2,15 @@
 # #{product.fullname} configuration
 ################################################################
 
+# Path of the data directory
+#dbms.directories.data=data
+
+# The name of the database to mount
+#dbms.active_database=graph.db
+
 #***************************************************************
 # Server configuration
 #***************************************************************
-
-# location of the database directory
-org.neo4j.server.database.location=#{org.neo4j.database.location}
 
 # Let the webserver only listen on the specified IP. Default is localhost (only
 # accept local connections). Uncomment to allow any connection. Please see the
