--- a/packaging/standalone/standalone-enterprise/src/main/distribution/text/enterprise/conf/neo4j-wrapper.conf
+++ b/packaging/standalone/standalone-enterprise/src/main/distribution/text/enterprise/conf/neo4j-wrapper.conf
@@ -39,10 +39,10 @@ wrapper.java.additional=-XX:+AlwaysPreTouch
 
 # Trust that non-static final fields are really final.
 # This allows more optimisations and improves overall performance.
-# NOTE: Only enable this if you don't have extensions or depencies that may use reflection or serialization to
-# change the value of final fields!
-#wrapper.java.additional=-XX:+UnlockExperimentalVMOptions
-#wrapper.java.additional=-XX:+TrustFinalNonStaticFields
+# NOTE: Disable this if you use embedded mode, or have extensions or depencies that may use reflection or serialization
+# to change the value of final fields!
+wrapper.java.additional=-XX:+UnlockExperimentalVMOptions
+wrapper.java.additional=-XX:+TrustFinalNonStaticFields
 
 # Disable explicit garbage collection, which is occasionally invoked by the JDK itself.
 wrapper.java.additional=-XX:+DisableExplicitGC
