Load AuthManager as a service
- AuthManager is loaded as a service (kernel.api.security.AuthManager.Factory),
based on the configuration value unsupported.dbms.auth_manager.
- Reversed the dependencies so that security now depends on kernel
- AuthManager now manages the lifecycle of the UserRepository internally
- A separate enterprise auth manager was created

--- a/enterprise/neo4j-enterprise/pom.xml
+++ b/enterprise/neo4j-enterprise/pom.xml
@@ -72,6 +72,11 @@
       <artifactId>neo4j-management</artifactId>
       <version>${project.version}</version>
     </dependency>
+    <dependency>
+      <groupId>org.neo4j</groupId>
+      <artifactId>neo4j-security-enterprise</artifactId>
+      <version>${project.version}</version>
+    </dependency>
 
     <!-- For the tests specified by this package -->
     <dependency>
