--- a/community/security/pom.xml
+++ b/community/security/pom.xml
@@ -62,6 +62,11 @@ the relevant Commercial Agreement.
     </dependency>
     <dependency>
       <groupId>org.neo4j</groupId>
+      <artifactId>neo4j-kernel</artifactId>
+      <version>${project.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>org.neo4j</groupId>
       <artifactId>neo4j-graphdb-api</artifactId>
       <version>${project.version}</version>
     </dependency>
