Skip findbugs by default
Better to do this only in a time/place where we will care
about the output. Can change the default if we start failing
builds on failures.

--- a/pom.xml
+++ b/pom.xml
@@ -463,7 +463,7 @@
     <profile>
       <id>skip-findbugs</id>
       <activation>
-        <activeByDefault>false</activeByDefault>
+        <activeByDefault>true</activeByDefault>
         <property>
           <name>skipFindbugs</name>
         </property>
