Prefix and seek queries regression
Switch to latest available lucene 5.5 version.
Introduce custom PrefixMultiTermsQuery and use it instead of default PrefixQuery to avoid expensive internal automaton creation.
Switch posting format to BlockTreeOrdsPostingsFormat by default.

Both of optimisations are pluggable and can be switched off by corresponding feature toggle.
Please note: switching posting format will require index regeneration.

--- a/community/lucene-index/pom.xml
+++ b/community/lucene-index/pom.xml
@@ -91,6 +91,11 @@ the relevant Commercial Agreement.
       <groupId>org.apache.lucene</groupId>
       <artifactId>lucene-queryparser</artifactId>
     </dependency>
+    <dependency>
+      <groupId>org.apache.lucene</groupId>
+      <artifactId>lucene-codecs</artifactId>
+    </dependency>
+
 
     <dependency>
       <groupId>junit</groupId>
