--- a/pom.xml
+++ b/pom.xml
@@ -25,7 +25,7 @@
     <pico.version>2.14.3</pico.version>
     <licensing.prepend.text>notice-agpl-prefix.txt</licensing.prepend.text>
     <licensing.phase>compile</licensing.phase>
-    <lucene.version>5.4.0</lucene.version>
+    <lucene.version>5.5.0</lucene.version>
     <logback-classic.version>1.1.2</logback-classic.version>
     <bouncycastle.version>1.53</bouncycastle.version>
     <generate-config-docs-phase>prepare-package</generate-config-docs-phase>
@@ -472,6 +472,11 @@
       <dependency>
         <groupId>org.apache.lucene</groupId>
         <artifactId>lucene-core</artifactId>
+        <version>${lucene.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.apache.lucene</groupId>
+        <artifactId>lucene-codecs</artifactId>
         <version>${lucene.version}</version>
       </dependency>
       <dependency>
