--- a/enterprise/core-edge/pom.xml
+++ b/enterprise/core-edge/pom.xml
@@ -59,6 +59,12 @@
 
       <dependency>
         <groupId>org.neo4j</groupId>
+        <artifactId>neo4j-dbms</artifactId>
+        <version>${project.version}</version>
+      </dependency>
+
+      <dependency>
+        <groupId>org.neo4j</groupId>
         <artifactId>neo4j-consistency-check</artifactId>
         <version>${project.version}</version>
         <scope>test</scope>
