fixed missing bolt settings in neo4j.conf in neo4j desktop

--- a/packaging/neo4j-desktop/src/main/resources/org/neo4j/desktop/config/neo4j-default.conf
+++ b/packaging/neo4j-desktop/src/main/resources/org/neo4j/desktop/config/neo4j-default.conf
@@ -18,6 +18,16 @@ org.neo4j.server.webserver.port=7474
 #org.neo4j.server.webserver.address=0.0.0.0
 
 #
+# Bolt protocol
+#
+# dbms.connector group configuration
+dbms.connector.0.enabled=true
+dbms.connector.0.tls.level=OPTIONAL
+
+# Uncomment to have Bolt accept non-local connections
+# dbms.connector.0.address=0.0.0.0:7687
+
+#
 # HTTPS Connector
 #
 
