Download TCK features from github
This commit removes the TCK feature files from the Neo4j repository.
They will instead live in the openCypher repository.

Also adhere to the new format for parameters.

--- a/community/cypher/compatibility-suite/pom.xml
+++ b/community/cypher/compatibility-suite/pom.xml
@@ -92,6 +92,20 @@
       <version>1.2.4</version>
     </dependency>
 
+    <!-- JSON -->
+
+    <dependency>
+      <groupId>org.codehaus.jackson</groupId>
+      <artifactId>jackson-core-asl</artifactId>
+      <scope>test</scope>
+    </dependency>
+
+    <dependency>
+      <groupId>org.codehaus.jackson</groupId>
+      <artifactId>jackson-mapper-asl</artifactId>
+      <scope>test</scope>
+    </dependency>
+
     <!-- scala -->
 
     <dependency>
