Add some settings to the standard neo4j.conf

--- a/packaging/standalone/standalone-enterprise/src/main/distribution/text/enterprise/conf/neo4j.conf
+++ b/packaging/standalone/standalone-enterprise/src/main/distribution/text/enterprise/conf/neo4j.conf
@@ -2,8 +2,9 @@
 # #{product.fullname} configuration
 ################################################################
 
-# Path of the data directory
+# Paths of directories in the installation.
 #dbms.directories.data=data
+#dbms.plugin.directory=plugins
 
 # The name of the database to mount
 #dbms.active_database=graph.db
@@ -68,6 +69,8 @@ dbms.security.tls_key_file=#{dbms.security.tls_key_file}
 # http://localhost:#{org.neo4j.webserver.port}/examples/unmanaged/helloworld/{nodeId}
 #org.neo4j.server.thirdparty_jaxrs_classes=org.neo4j.examples.server.unmanaged=/examples/unmanaged
 
+# Number of Neo4j worker threads.
+#org.neo4j.server.webserver.maxthreads=
 
 #*****************************************************************
 # HTTP logging configuration
@@ -116,6 +119,11 @@ dbms.security.allow_outgoing_browser_connections=#{dbms.security.allow_outgoing_
 # `data/import/movies/actors.csv`.
 #dbms.security.load_csv_file_url_root=data/import
 
+# Determines if Cypher will allow using file URLs when loading data using
+# `LOAD CSV`. Setting this value to `false` will cause Neo4j to fail `LOAD CSV`
+# clauses that load data from the file system.
+#allow_file_urls=true
+
 # Keep logical logs, helps debugging but uses more disk space, enabled for
 # legacy reasons To limit space needed to store historical logs use values such
 # as: "7 days" or "100M size" instead of "true".
@@ -127,6 +135,10 @@ dbms.security.allow_outgoing_browser_connections=#{dbms.security.allow_outgoing_
 #remote_shell_host=127.0.0.1
 # The port the shell will listen on, default is 1337.
 #remote_shell_port=1337
+
+# Only allow read operations from this Neo4j instance. This mode still requires
+# write access to the directory for lock purposes.
+#read_only=false
 
 # Enable online backups to be taken from this database.
 online_backup_enabled=true
@@ -192,3 +204,7 @@ ha.pull_interval=10
 # If you are using a load-balancer that doesn't support HTTP Auth, you may need to turn off authentication for the
 # HA HTTP status endpoint by uncommenting the following line.
 #dbms.security.ha_status_auth_enabled=false
+
+# Whether this instance should only participate as slave in cluster. If set to
+# true, it will never be elected as master.
+#ha.slave_only=false
