--- a/packaging/standalone/standalone-enterprise/src/main/distribution/text/enterprise/conf/neo4j.conf
+++ b/packaging/standalone/standalone-enterprise/src/main/distribution/text/enterprise/conf/neo4j.conf
@@ -189,7 +189,7 @@ ha.pull_interval=10
 #ha.tx_push_strategy=fixed_ascending
 
 # Policy for how to handle branched data.
-#branched_data_policy=keep_all
+#ha.branched_data_policy=keep_all
 
 # Clustering timeouts
 # Default timeout.
@@ -199,7 +199,7 @@ ha.pull_interval=10
 #ha.heartbeat_interval=5s
 
 # Timeout for heartbeats between cluster members. Should be at least twice that of ha.heartbeat_interval.
-#heartbeat_timeout=11s
+#ha.heartbeat_timeout=11s
 
 # If you are using a load-balancer that doesn't support HTTP Auth, you may need to turn off authentication for the
 # HA HTTP status endpoint by uncommenting the following line.
