Improve the configuration defults

--- a/packaging/standalone/standalone-enterprise/src/main/distribution/text/enterprise/conf/neo4j.conf
+++ b/packaging/standalone/standalone-enterprise/src/main/distribution/text/enterprise/conf/neo4j.conf
@@ -25,8 +25,9 @@
 # security section in the neo4j manual before modifying this.
 #org.neo4j.server.webserver.address=0.0.0.0
 
-# Require (or disable the requirement of) auth to access Neo4j
-dbms.security.auth_enabled=#{dbms.security.require_auth}
+# Whether requests to Neo4j are authenticated.
+# To disable authentication, uncomment this line:
+#dbms.security.auth_enabled=false
 
 #
 # Bolt protocol
@@ -35,7 +36,8 @@ dbms.security.auth_enabled=#{dbms.security.require_auth}
 dbms.connector.0.enabled=true
 dbms.connector.0.tls.level=OPTIONAL
 
-# Uncomment to have Bolt accept non-local connections
+# Host and port for the Neo4j Bolt Protocol
+# To have Bolt accept non-local connections, uncomment this line:
 # dbms.connector.0.address=0.0.0.0:7687
 
 #
@@ -100,7 +102,7 @@ org.neo4j.server.http.log.config=conf/neo4j-http-logging.xml
 #dbms.pagecache.memory=10g
 
 # Enable this to specify a parser other than the default one.
-#cypher_parser_version=2.0
+#cypher_parser_version=3.0
 
 # Set the root directory for use with file URLs (`file:///`) in LOAD CSV.
 # If enabled, file URLs will refer to locations inside the `data/import`
@@ -113,12 +115,10 @@ org.neo4j.server.http.log.config=conf/neo4j-http-logging.xml
 # clauses that load data from the file system.
 #allow_file_urls=true
 
-# Keep logical logs, helps debugging but uses more disk space, enabled for
-# legacy reasons To limit space needed to store historical logs use values such
-# as: "7 days" or "100M size" instead of "true".
+# Retention policy for transaction logs needed to perform recovery and backups.
 #keep_logical_logs=7 days
 
-# Enable shell server so that remote clients can connect via Neo4j shell.
+# Enable a remote shell server which Neo4j Shell clients can log in to.
 #remote_shell_enabled=true
 # The network interface IP the shell will listen on (use 0.0.0.0 for all interfaces).
 #remote_shell_host=127.0.0.1
@@ -130,11 +130,10 @@ org.neo4j.server.http.log.config=conf/neo4j-http-logging.xml
 #read_only=false
 
 # Enable online backups to be taken from this database.
-online_backup_enabled=true
+#online_backup_enabled=true
 
-# Port to listen to for incoming backup requests.
-online_backup_server=127.0.0.1:6362
-
+# To allow remote backups, uncomment this line:
+#online_backup_server=0.0.0.0:6362
 
 # Uncomment and specify these lines for running Neo4j in High Availability mode.
 # See the High availability setup tutorial for more details on these settings
