Rename some settings to conform to the new scheme

--- a/manual/embedded-examples/src/test/resources/neo4j.conf
+++ b/manual/embedded-examples/src/test/resources/neo4j.conf
@@ -1,6 +1,6 @@
 
 # Enable this to be able to upgrade a store from an older version.
-#allow_store_upgrade=true
+#dbms.allow_format_migration=true
 
 # The amount of memory to use for mapping the store files, in bytes (or
 # kilobytes with the 'k' suffix, megabytes with 'm' and gigabytes with 'g').
@@ -13,7 +13,7 @@
 #dbms.pagecache.memory=10g
 
 # Enable this to specify a parser other than the default one.
-#cypher_parser_version=2.0
+#cypher.default_language_version=2.0
 
 # Keep logical logs, helps debugging but uses more disk space, enabled for
 # legacy reasons To limit space needed to store historical logs use values such
