--- a/packaging/neo4j-desktop/src/main/resources/org/neo4j/desktop/config/neo4j-default.conf
+++ b/packaging/neo4j-desktop/src/main/resources/org/neo4j/desktop/config/neo4j-default.conf
@@ -22,7 +22,7 @@ org.neo4j.server.webserver.port=7474
 #
 # dbms.connector group configuration
 dbms.connector.0.enabled=true
-dbms.connector.0.tls.level=OPTIONAL
+dbms.connector.0.tls_level=OPTIONAL
 
 # Uncomment to have Bolt accept non-local connections
 # dbms.connector.0.address=0.0.0.0:7687
@@ -71,7 +71,7 @@ org.neo4j.server.http.log.enabled=false
 #org.neo4j.server.http.log.config=neo4j-http-logging.xml
 
 # Enable this to be able to upgrade a store from an older version.
-#allow_store_upgrade=true
+#dbms.allow_format_migration=true
 
 # The amount of memory to use for mapping the store files, in bytes (or
 # kilobytes with the 'k' suffix, megabytes with 'm' and gigabytes with 'g').
@@ -84,7 +84,7 @@ org.neo4j.server.http.log.enabled=false
 #dbms.pagecache.memory=10g
 
 # Enable this to specify a parser other than the default one.
-#cypher_parser_version=2.0
+#cypher.default_language_version=2.0
 
 # Keep logical logs, helps debugging but uses more disk space, enabled for
 # legacy reasons To limit space needed to store historical logs use values such
