--- a/packaging/standalone/standalone-community/src/main/distribution/text/community/conf/neo4j.conf
+++ b/packaging/standalone/standalone-community/src/main/distribution/text/community/conf/neo4j.conf
@@ -28,7 +28,7 @@
 
 # dbms.connector group configuration
 dbms.connector.0.enabled=true
-dbms.connector.0.tls.level=OPTIONAL
+dbms.connector.0.tls_level=OPTIONAL
 
 # Host and port for the Neo4j Bolt Protocol
 # To have Bolt accept non-local connections, uncomment this line:
@@ -83,7 +83,7 @@ org.neo4j.server.http.log.enabled=false
 org.neo4j.server.http.log.config=conf/neo4j-http-logging.xml
 
 # Enable this to be able to upgrade a store from an older version.
-#allow_store_upgrade=true
+#dbms.allow_format_migration=true
 
 # The amount of memory to use for mapping the store files, in bytes (or
 # kilobytes with the 'k' suffix, megabytes with 'm' and gigabytes with 'g').
@@ -96,7 +96,7 @@ org.neo4j.server.http.log.config=conf/neo4j-http-logging.xml
 #dbms.pagecache.memory=10g
 
 # Enable this to specify a parser other than the default one.
-#cypher_parser_version=3.0
+#cypher.default_language_version=3.0
 
 # Set the root directory for use with file URLs (`file:///`) in LOAD CSV.
 # If enabled, file URLs will refer to locations inside the `data/import`
