--- a/packaging/standalone/standalone-enterprise/src/main/distribution/text/enterprise/conf/neo4j.conf
+++ b/packaging/standalone/standalone-enterprise/src/main/distribution/text/enterprise/conf/neo4j.conf
@@ -34,7 +34,7 @@
 #
 # dbms.connector group configuration
 dbms.connector.0.enabled=true
-dbms.connector.0.tls.level=OPTIONAL
+dbms.connector.0.tls_level=OPTIONAL
 
 # Host and port for the Neo4j Bolt Protocol
 # To have Bolt accept non-local connections, uncomment this line:
@@ -89,7 +89,7 @@ org.neo4j.server.http.log.enabled=false
 org.neo4j.server.http.log.config=conf/neo4j-http-logging.xml
 
 # Enable this to be able to upgrade a store from an older version.
-#allow_store_upgrade=true
+#dbms.allow_format_migration=true
 
 # The amount of memory to use for mapping the store files, in bytes (or
 # kilobytes with the 'k' suffix, megabytes with 'm' and gigabytes with 'g').
@@ -102,7 +102,7 @@ org.neo4j.server.http.log.config=conf/neo4j-http-logging.xml
 #dbms.pagecache.memory=10g
 
 # Enable this to specify a parser other than the default one.
-#cypher_parser_version=3.0
+#cypher.default_language_version=3.0
 
 # Set the root directory for use with file URLs (`file:///`) in LOAD CSV.
 # If enabled, file URLs will refer to locations inside the `data/import`
@@ -130,10 +130,10 @@ org.neo4j.server.http.log.config=conf/neo4j-http-logging.xml
 #read_only=false
 
 # Enable online backups to be taken from this database.
-#online_backup_enabled=true
+#dbms.backup.enabled=true
 
 # To allow remote backups, uncomment this line:
-#online_backup_server=0.0.0.0:6362
+#dbms.backup.address=0.0.0.0:6362
 
 # Uncomment and specify these lines for running Neo4j in High Availability mode.
 # See the High availability setup tutorial for more details on these settings
