Rename more settings to conform to the new scheme

--- a/packaging/standalone/standalone-community/src/main/distribution/text/community/conf/neo4j-wrapper.conf
+++ b/packaging/standalone/standalone-community/src/main/distribution/text/community/conf/neo4j-wrapper.conf
@@ -12,8 +12,8 @@ wrapper.java.additional=-Dorg.neo4j.config.file=conf/neo4j.conf
 # calculated based on available system resources.
 # Uncomment these lines to set specific initial and maximum
 # heap size in MB.
-#wrapper.java.initmemory=512
-#wrapper.java.maxmemory=512
+#dbms.memory.heap.initial_size=512
+#dbms.memory.heap.max_size=512
 
 # G1GC generally strikes a good balance between throughput and tail
 # latency, without too much tuning.
@@ -80,7 +80,7 @@ wrapper.java.additional=-XX:+DisableExplicitGC
 #  service can then be reinstalled.
 
 # Name of the service
-wrapper.name=neo4j
+dbms.windows_service_name=neo4j
 
 #********************************************************************
 # Other Neo4j system properties
