--- a/packaging/standalone/standalone-community/src/main/distribution/text/community/conf/neo4j.conf
+++ b/packaging/standalone/standalone-community/src/main/distribution/text/community/conf/neo4j.conf
@@ -4,7 +4,11 @@
 
 # Paths of directories in the installation.
 #dbms.directories.data=data
-#dbms.plugin.directory=plugins
+#dbms.directories.plugins=plugins
+
+# Uncomment this line to resolve import files relative to a directory. See the
+# `LOAD CSV` section of the manual for details.
+#dbms.directories.import=data/import
 
 # The name of the database to mount
 #dbms.active_database=graph.db
@@ -63,10 +67,10 @@ dbms.security.tls_key_file=#{dbms.security.tls_key_file}
 # org.neo4j.examples.server.unmanaged.HelloWorldResource.java from
 # neo4j-server-examples under /examples/unmanaged, resulting in a final URL of
 # http://localhost:#{org.neo4j.webserver.port}/examples/unmanaged/helloworld/{nodeId}
-#org.neo4j.server.thirdparty_jaxrs_classes=org.neo4j.examples.server.unmanaged=/examples/unmanaged
+#dbms.unmanaged_extension_classes=org.neo4j.examples.server.unmanaged=/examples/unmanaged
 
 # Number of Neo4j worker threads.
-#org.neo4j.server.webserver.maxthreads=
+#dbms.threads.worker_count=
 
 #*****************************************************************
 # HTTP logging configuration
@@ -93,32 +97,26 @@ org.neo4j.server.http.log.config=conf/neo4j-http-logging.xml
 # rest for the page cache.
 # The default page cache memory assumes the machine is dedicated to running
 # Neo4j, and is heuristically set to 50% of RAM minus the max Java heap size.
-#dbms.pagecache.memory=10g
+#dbms.memory.pagecache.size=10g
 
 # Enable this to specify a parser other than the default one.
 #cypher.default_language_version=3.0
 
-# Set the root directory for use with file URLs (`file:///`) in LOAD CSV.
-# If enabled, file URLs will refer to locations inside the `data/import`
-# directory. I.e. `file:///movies/actors.csv` will load from the file
-# `data/import/movies/actors.csv`.
-#dbms.security.load_csv_file_url_root=data/import
-
 # Determines if Cypher will allow using file URLs when loading data using
 # `LOAD CSV`. Setting this value to `false` will cause Neo4j to fail `LOAD CSV`
 # clauses that load data from the file system.
-#allow_file_urls=true
+#dbms.security.allow_csv_import_from_file_urls=true
 
 # Retention policy for transaction logs needed to perform recovery and backups.
-#keep_logical_logs=7 days
+#dbms.tx_log.rotation.retention_policy=7 days
 
 # Enable a remote shell server which Neo4j Shell clients can log in to.
-#remote_shell_enabled=true
+#dbms.shell.enabled=true
 # The network interface IP the shell will listen on (use 0.0.0.0 for all interfaces).
-#remote_shell_host=127.0.0.1
+#dbms.shell.host=127.0.0.1
 # The port the shell will listen on, default is 1337.
-#remote_shell_port=1337
+#dbms.shell.port=1337
 
 # Only allow read operations from this Neo4j instance. This mode still requires
 # write access to the directory for lock purposes.
-#read_only=false
+#dbms.read_only=false
