--- a/manual/embedded-examples/src/test/resources/neo4j.conf
+++ b/manual/embedded-examples/src/test/resources/neo4j.conf
@@ -10,7 +10,7 @@
 # rest for the page cache.
 # The default page cache memory assumes the machine is dedicated to running
 # Neo4j, and is heuristically set to 50% of RAM minus the max Java heap size.
-#dbms.pagecache.memory=10g
+#dbms.memory.pagecache.size=10g
 
 # Enable this to specify a parser other than the default one.
 #cypher.default_language_version=2.0
@@ -18,11 +18,11 @@
 # Keep logical logs, helps debugging but uses more disk space, enabled for
 # legacy reasons To limit space needed to store historical logs use values such
 # as: "7 days" or "100M size" instead of "true".
-keep_logical_logs=true
+dbms.tx_log.rotation.retention_policy=true
 
 # Enable shell server so that remote clients can connect via Neo4j shell.
-#remote_shell_enabled=true
+#dbms.shell.enabled=true
 # The network interface IP the shell will listen on (use 0.0.0.0 for all interfaces).
-#remote_shell_host=127.0.0.1
+#dbms.shell.host=127.0.0.1
 # The port the shell will listen on, default is 1337.
-#remote_shell_port=1337
+#dbms.shell.port=1337
