--- a/packaging/standalone/standalone-community/src/main/distribution/text/community/conf/neo4j-wrapper.conf
+++ b/packaging/standalone/standalone-community/src/main/distribution/text/community/conf/neo4j-wrapper.conf
@@ -85,4 +85,4 @@ dbms.windows_service_name=neo4j
 #********************************************************************
 # Other Neo4j system properties
 #********************************************************************
-wrapper.java.additional=-Dneo4j.ext.udc.source=#{neo4j.ext.udc.source}
+wrapper.java.additional=-Dunsupported.dbms.udc.source=#{unsupported.dbms.udc.source}
