--- a/packaging/standalone/standalone-enterprise/src/main/distribution/text/enterprise/conf/neo4j-wrapper.conf
+++ b/packaging/standalone/standalone-enterprise/src/main/distribution/text/enterprise/conf/neo4j-wrapper.conf
@@ -85,5 +85,5 @@ dbms.windows_service_name=neo4j
 #********************************************************************
 # Other Neo4j system properties
 #********************************************************************
-wrapper.java.additional=-Dneo4j.ext.udc.source=#{neo4j.ext.udc.source}
+wrapper.java.additional=-Dunsupported.dbms.udc.source=#{unsupported.dbms.udc.source}
 wrapper.java.additional=-Dorg.neo4j.cluster.logdirectory=data/log
