Rename setting for extra JVM arguments

--- a/packaging/standalone/standalone-community/src/main/distribution/text/community/conf/neo4j-wrapper.conf
+++ b/packaging/standalone/standalone-community/src/main/distribution/text/community/conf/neo4j-wrapper.conf
@@ -2,7 +2,7 @@
 # Property file references
 #********************************************************************
 
-wrapper.java.additional=-Dorg.neo4j.config.file=conf/neo4j.conf
+dbms.jvm.additional=-Dorg.neo4j.config.file=conf/neo4j.conf
 
 #********************************************************************
 # JVM Parameters
@@ -17,15 +17,15 @@ wrapper.java.additional=-Dorg.neo4j.config.file=conf/neo4j.conf
 
 # G1GC generally strikes a good balance between throughput and tail
 # latency, without too much tuning.
-wrapper.java.additional=-XX:+UseG1GC
+dbms.jvm.additional=-XX:+UseG1GC
 
 # Have common exceptions keep producing stack traces, so they can be
 # debugged regardless of how often logs are rotated.
-wrapper.java.additional=-XX:-OmitStackTraceInFastThrow
+dbms.jvm.additional=-XX:-OmitStackTraceInFastThrow
 
 # Reduce probability of objects getting the same identity hash code
 # via a race, by computing them with thread-local PRNGs.
-wrapper.java.additional=-XX:hashCode=5
+dbms.jvm.additional=-XX:hashCode=5
 
 # Make sure that `initmemory` is not only allocated, but committed to
 # the process, before starting the database. This reduces memory
@@ -34,25 +34,25 @@ wrapper.java.additional=-XX:hashCode=5
 # due to heap-growing GC events, where a decrease in available page
 # cache leads to an increase in mean IO response time.
 # Try reducing the heap memory, if this flag degrades performance.
-wrapper.java.additional=-XX:+AlwaysPreTouch
+dbms.jvm.additional=-XX:+AlwaysPreTouch
 
 # Trust that non-static final fields are really final.
 # This allows more optimisations and improves overall performance.
 # NOTE: Disable this if you use embedded mode, or have extensions or depencies that may use reflection or serialization
 # to change the value of final fields!
-wrapper.java.additional=-XX:+UnlockExperimentalVMOptions
-wrapper.java.additional=-XX:+TrustFinalNonStaticFields
+dbms.jvm.additional=-XX:+UnlockExperimentalVMOptions
+dbms.jvm.additional=-XX:+TrustFinalNonStaticFields
 
 # Disable explicit garbage collection, which is occasionally invoked by the JDK itself.
-wrapper.java.additional=-XX:+DisableExplicitGC
+dbms.jvm.additional=-XX:+DisableExplicitGC
 
 # Uncomment the following lines to enable garbage collection logging
-#wrapper.java.additional=-Xloggc:data/log/neo4j-gc.log
-#wrapper.java.additional=-XX:+PrintGCDetails
-#wrapper.java.additional=-XX:+PrintGCDateStamps
-#wrapper.java.additional=-XX:+PrintGCApplicationStoppedTime
-#wrapper.java.additional=-XX:+PrintPromotionFailure
-#wrapper.java.additional=-XX:+PrintTenuringDistribution
+#dbms.jvm.additional=-Xloggc:data/log/neo4j-gc.log
+#dbms.jvm.additional=-XX:+PrintGCDetails
+#dbms.jvm.additional=-XX:+PrintGCDateStamps
+#dbms.jvm.additional=-XX:+PrintGCApplicationStoppedTime
+#dbms.jvm.additional=-XX:+PrintPromotionFailure
+#dbms.jvm.additional=-XX:+PrintTenuringDistribution
 
 # Remote JMX monitoring, uncomment and adjust the following lines as needed.
 # Also make sure to update the jmx.access and jmx.password files with appropriate permission roles and passwords,
@@ -62,14 +62,14 @@ wrapper.java.additional=-XX:+DisableExplicitGC
 # and have permissions set to 0600.
 # For details on setting these file permissions on Windows see:
 #     http://docs.oracle.com/javase/7/docs/technotes/guides/management/security-windows.html
-#wrapper.java.additional=-Dcom.sun.management.jmxremote.port=3637
-#wrapper.java.additional=-Dcom.sun.management.jmxremote.authenticate=true
-#wrapper.java.additional=-Dcom.sun.management.jmxremote.ssl=false
-#wrapper.java.additional=-Dcom.sun.management.jmxremote.password.file=conf/jmx.password
-#wrapper.java.additional=-Dcom.sun.management.jmxremote.access.file=conf/jmx.access
+#dbms.jvm.additional=-Dcom.sun.management.jmxremote.port=3637
+#dbms.jvm.additional=-Dcom.sun.management.jmxremote.authenticate=true
+#dbms.jvm.additional=-Dcom.sun.management.jmxremote.ssl=false
+#dbms.jvm.additional=-Dcom.sun.management.jmxremote.password.file=conf/jmx.password
+#dbms.jvm.additional=-Dcom.sun.management.jmxremote.access.file=conf/jmx.access
 
 # Some systems cannot discover host name automatically, and need this line configured:
-#wrapper.java.additional=-Djava.rmi.server.hostname=$THE_NEO4J_SERVER_HOSTNAME
+#dbms.jvm.additional=-Djava.rmi.server.hostname=$THE_NEO4J_SERVER_HOSTNAME
 
 #********************************************************************
 # Wrapper Windows NT/2000/XP Service Properties
@@ -85,4 +85,4 @@ dbms.windows_service_name=neo4j
 #********************************************************************
 # Other Neo4j system properties
 #********************************************************************
-wrapper.java.additional=-Dunsupported.dbms.udc.source=#{unsupported.dbms.udc.source}
+dbms.jvm.additional=-Dunsupported.dbms.udc.source=#{unsupported.dbms.udc.source}
