Added inbuilt proc allowing a user to change their password

--- a/community/security/pom.xml
+++ b/community/security/pom.xml
@@ -60,6 +60,11 @@ the relevant Commercial Agreement.
       <artifactId>neo4j-common</artifactId>
       <version>${project.version}</version>
     </dependency>
+    <dependency>
+      <groupId>org.neo4j</groupId>
+      <artifactId>neo4j-graphdb-api</artifactId>
+      <version>${project.version}</version>
+    </dependency>
 
     <!-- Test dependencies -->
     <dependency>
