Update sample configuration file.

--- a/packaging/standalone/standalone-community/src/main/distribution/text/community/conf/neo4j.conf
+++ b/packaging/standalone/standalone-community/src/main/distribution/text/community/conf/neo4j.conf
@@ -86,6 +86,24 @@ org.neo4j.server.http.log.enabled=false
 # ubiquitous common log format
 org.neo4j.server.http.log.config=conf/neo4j-http-logging.xml
 
+#***************************************************************
+# GC Logging
+#***************************************************************
+
+# Enable GC Logging by uncommenting this line.
+#dbms.logs.gc.enabled=true
+
+# GC Logging Options
+# see http://docs.oracle.com/cd/E19957-01/819-0084-10/pt_tuningjava.html#wp57013 for more information.
+#dbms.logs.gc.options=-XX:+PrintGCDetails -XX:+PrintGCDateStamps -XX:+PrintGCApplicationStoppedTime -XX:+PrintPromotionFailure -XX:+PrintTenuringDistribution
+
+# Number of GC logs to keep.
+#dbms.logs.gc.rotation.keep_number=5
+
+# Size of each GC log that is kept.
+#dbms.logs.rotation.gc.size=20m
+
+
 # Enable this to be able to upgrade a store from an older version.
 #dbms.allow_format_migration=true
 
