Auto-generate config docs for server

--- a/manual/contents/pom.xml
+++ b/manual/contents/pom.xml
@@ -244,6 +244,13 @@
       <classifier>docs</classifier>
       <scope>provided</scope>
     </dependency>
+    <dependency>
+      <groupId>org.neo4j</groupId>
+      <artifactId>neo4j-dbms</artifactId>
+      <version>${neo4j.version}</version>
+      <classifier>docs</classifier>
+      <scope>provided</scope>
+    </dependency>
   </dependencies>
 
   <build>
