--- a/community/server/pom.xml
+++ b/community/server/pom.xml
@@ -548,6 +548,20 @@
               <goal>run</goal>
             </goals>
           </execution>
+          <execution>
+            <id>generate-source-based-config-documentation</id>
+            <phase>${generate-config-docs-phase}</phase>
+            <configuration>
+              <target>
+                <java classname="org.neo4j.tooling.GenerateConfigDocumentation"
+                      classpathref="maven.compile.classpath" failonerror="true">
+                  <arg value="org.neo4j.server.configuration.ServerSettings" />
+                  <arg value="${project.build.directory}/docs/ops/configuration-attributes.asciidoc" />
+                </java>
+              </target>
+            </configuration>
+            <goals><goal>run</goal></goals>
+          </execution>
         </executions>
         <dependencies>
           <dependency>
