--- a/packaging/standalone/standalone-enterprise/src/main/distribution/text/enterprise/conf/neo4j.conf
+++ b/packaging/standalone/standalone-enterprise/src/main/distribution/text/enterprise/conf/neo4j.conf
@@ -8,7 +8,7 @@
 
 # Uncomment this line to resolve import files relative to a directory. See the
 # `LOAD CSV` section of the manual for details.
-#dbms.directories.import=data/import
+#dbms.directories.import=import
 
 # The name of the database to mount
 #dbms.active_database=graph.db
